--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <span class="logo">Zetta</span>
                 <p class="contact-details">
                     info@zettavp.com  <br/>
-                    140 Geary Street, Suite 1000 <br/>
+                    473 Jackson Street, 2nd Floor <br/>
                     San Francisco, CA
                 </p>
                 <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017</p>
