--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="hero-content">
                     <span class="logo">Zetta</span>
                     <h1>Zetta invests in intelligent enterprise software.</h1>
-                    <p>We partner with companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds. We're a focused fund, only leading or co-leading funding rounds.</p>
+                    <p>We partner with companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds.</p>
                 </div>
             </div>
         </section>
