added new companies

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="falkonry" class="last">
+                    <div class="company" id="falkonry">
                         <h3>
                             <a href="http://falkonry.com/" target="_blank">
                                 <img src="img/company17.png" alt="Falkonry">
@@ -348,6 +348,50 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Falkonry automates industrial operational gains by combining advanced pattern recognition techniques on industrial data with the knowledge of domain experts, and generates real-time alerts towards improving uptime, yield, quality, and efficiency.</p>
+                    </div>
+                    <div class="company" id="dor">
+                        <h3>
+                            <a href="https://www.getdor.com/" target="_blank">
+                                <img src="img/company18.png" alt="Dor">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Series Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Dor combines data from its low cost, low power people tracker with public and private data to prescribe actions to retailers and commercial property managers.</p>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="marketing-evolution">
+                        <h3>
+                            <a href="https://www.marketingevolution.com/" target="_blank">
+                                <img src="img/company19.png" alt="Marketing Evolution">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Series A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Marketing Evolution provides real-time optimization to allow creative rotation, targeting and media mix changes down to the person-level for both online and offline media.</p>
+                    </div>
+                    <div class="company" id="invenia" class="last">
+                        <h3>
+                            <a href="https://www.invenia.ca/" target="_blank">
+                                <img src="img/company20.png" alt="Invenia">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Series A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Invenia predicts electricity grid activity using machine learning-based predictive models. The company is paid by independent system operators based on the accuracy of its predictions.</p>
                     </div>
                 </div>
             </div>
