--- a/index.html
+++ b/index.html
@@ -453,6 +453,15 @@
                         <p>Previously, Jeff worked as an Associate at vSpring Capital, a Salt Lake City-based venture capital firm with over $500M under management where he invested in both software and Internet companies including Altiris (IPO), Ancestry.com (IPO), Cerberian (acquired by Bluecoat Systems), Control4 (IPO),and MediConnect Global (acquired by Verisk Analytics).</p>
                         <p>Jeff is an angel investor having invested in over 30 startups including Coupa, Domo, Insidesales, Lithium, MX, Omniture and Uber. Jeff is an investor and serves on the board of directors at Skullcandy (NASDAQ: SKUL), Needle and Julep.</p>
                     </li>
+                    <li>
+                        <div class="person">
+                            <img src="img/kristen.jpg" alt="Kristen Ostro">
+                        </div>
+                        <h3><b>Kristen Ostro</b> – Director of Operations</h3>
+                        <p>Kristen previously served as the Director of Operations to both Xfund and Homebrew, helping them launch and build both firms from inception. She also started, Strut Consulting, which provides operations support to today's emerging and established venture capital firms. Before that, Kristen spent five years working as an Executive Assistant and West Coast Marketing Coordinator for New Enterprise Associates (NEA), one of the largest and most active venture capital firms in the world.</p>
+                        <p>Prior to joining NEA, she was in a jack-of-all-trades role for a licensed broker-dealer in San Francisco, and also supported the Executive Director of Baker &amp; McKenzie, LLP, at their San Francisco and Palo Alto locations.She remains forever grateful to Craigslist for connecting her with her first job at Tower Records headquarters in West Sacramento, CA. There she supported the Chief Financial Officer and his staff during the company’s final years.</p>
+                        <p>Kristen played Division One Women’s Volleyball for Towson University, where she earned two torn ACLs and a B.S. in Business Administration.</p>
+                    </li>
                 </ul>
             </div>
         </section>
