--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         </div>
                         <h3><b>Ash Fontana</b> – Managing Director</h3>
                         <p>Ash started the money side of AngelList – the most successful startup investing platform in the world &ndash; managing $130M over more than 250 funds. There, he launched online investing, created the first startup &lsquo;index fund&rsquo; and curated investment opportunities across 500,000 companies. He also ran special projects like AngelList’s expansion into Europe and the UK. Simultaneously, Ash led syndicates and angel investments in Canva, Mixmax and others.</p>
-                        <p>An entrepreneur at heart, Ash previously co-founded Topguest, a Founders Fund-backed company that built customer analytics technology for companies like IHG, United and Caesars Entertainment. Topguest sold in an 8 figure transaction 18 months after the company was founded.</p>
+                        <p>Ash previously co-founded Topguest, a Founders Fund-backed company that built customer analytics technology for companies like IHG, United and Caesars Entertainment. Topguest sold in an 8 figure transaction 18 months after the company was founded.</p>
                         <p>He started his professional career at Macquarie Capital, where he was a top-ranked analyst in private equity, investment banking and equity research. Academically, he graduated with First Class honors in law and finance on five scholarships from the University of Sydney.</p>
                     </li>
                     <li>
