--- a/index.html
+++ b/index.html
@@ -453,24 +453,24 @@
                     </li>
                     <li>
                         <div class="person">
+                            <img src="img/ivy.jpg" alt="Ivy Nguyen">
+                        </div>
+                        <h3><b>Ivy Nguyen</b> – Associate</h3>
+                        <p>Ivy Nguyen brings over four years of experience as an investor and startup advisor in the technology space.</p>
+                        <p>Prior to joining Zetta Ventures, Ivy was Senior Associate at NewGen Capital, a venture capital firm providing early stage deep tech startups with growth opportunities in China and the greater APAC region. During her tenure at NewGen she sourced and led investments in several companies including Constructor, NuCypher, Assembly, and Agridata.</p>
+                        <p>Before NewGen, Ivy managed the startup accelerator program at Imagine H2O, an organization supporting global water innovation. At IH2O Ivy supported over 40 water tech startups from over 14 countries including Israel, Australia, and Singapore by connecting them to the program's growing network of investors, mentors, and pilot partners at major Fortune 1000 companies.</p>
+                        <p>Ivy earned her B.S. in Chemical Engineering from Stanford University, where she served as News Managing Editor of the Stanford Daily.</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="person">
                             <img src="img/kristen.jpg" alt="Kristen Ostro">
                         </div>
                         <h3><b>Kristen Ostro</b> – Director of Operations</h3>
                         <p>Kristen previously served as the Director of Operations to both Xfund and Homebrew, helping them launch and build both firms from inception. She also started, Strut Consulting, which provides operations support to today's emerging and established venture capital firms. Before that, Kristen spent five years working as an Executive Assistant and West Coast Marketing Coordinator for New Enterprise Associates (NEA), one of the largest and most active venture capital firms in the world.</p>
                         <p>Prior to joining NEA, she was in a jack-of-all-trades role for a licensed broker-dealer in San Francisco, and also supported the Executive Director of Baker &amp; McKenzie, LLP, at their San Francisco and Palo Alto locations. She remains forever grateful to Craigslist for connecting her with her first job at Tower Records headquarters in West Sacramento, CA. There she supported the Chief Financial Officer and his staff during the company’s final years.</p>
                         <p>Kristen played Division One Women’s Volleyball for Towson University, where she earned two torn ACLs and a B.S. in Business Administration.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <div class="person">
-                            <img src="img/ivy.jpg" alt="Ivy Nguyen">
-                        </div>
-                        <h3><b>Ivy Nguyen</b></h3>
-                        <p>Ivy Nguyen brings over four years of experience as an investor and startup advisor in the technology space.</p>
-                        <p>Prior to joining Zetta Ventures, Ivy was Senior Associate at NewGen Capital, a venture capital firm providing early stage deep tech startups with growth opportunities in China and the greater APAC region. During her tenure at NewGen she sourced and led investments in several companies including Constructor, NuCypher, Assembly, and Agridata.</p>
-                        <p>Before NewGen, Ivy managed the startup accelerator program at Imagine H2O, an organization supporting global water innovation. At IH2O Ivy supported over 40 water tech startups from over 14 countries including Israel, Australia, and Singapore by connecting them to the program's growing network of investors, mentors, and pilot partners at major Fortune 1000 companies.</p>
-                        <p>Ivy earned her B.S. in Chemical Engineering from Stanford University, where she served as News Managing Editor of the Stanford Daily.</p>
                     </li>
                 </ul>
             </div>
