added job links

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                             <dd>Seed</dd>
                         </dl>
                         <p>Appdiff makes testing mobile apps simple, reliable, and comprehensive.</p>
+                        <a href="https://angel.co/appdiff/jobs">Jobs at AppDiff</a>                        
                     </div>
                 </div>
                 <div class="company-pair">
@@ -316,6 +317,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Focal Systems develops computer vision technology that automatically builds a comprehensive CPG product database, optimizes operations for retailers, and helps customers find what they want.</p>
+                        <a href="https://focal.systems/careers">Jobs at Focal</a> 
                     </div>
                     <div class="company" id="lilt">
                         <h3>
@@ -332,6 +334,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Lilt develops world-leading machine translation technology that helps businesses optimize language translation speed, quality and cost to reach new customers.</p>
+                        <a href="https://angel.co/lilt/jobs">Jobs at Lilt</a> 
                     </div>
                 </div>
                 <div class="company-pair">
@@ -348,6 +351,7 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Falkonry automates industrial operational gains by combining advanced pattern recognition techniques on industrial data with the knowledge of domain experts, and generates real-time alerts towards improving uptime, yield, quality, and efficiency.</p>
+                        <a href="https://angel.co/falkonry/jobs">Jobs at Falkonry</a>
                     </div>
                     <div class="company" id="dor">
                         <h3>
@@ -362,6 +366,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Dor combines data from its low cost, low power people tracker with public and private data to prescribe actions to retailers and commercial property managers.</p>
+                        <a href="https://angel.co/dor-technologies/jobs">Jobs at Dor</a>
                     </div>
                 </div>
                 <div class="company-pair">
@@ -378,6 +383,7 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Marketing Evolution provides real-time optimization to allow creative rotation, targeting and media mix changes down to the person-level for both online and offline media.</p>
+                        <a href="http://marketingevolution.theresumator.com/">Jobs at Marketing Evolution</a>
                     </div>
                     <div class="company" id="invenia" class="last">
                         <h3>
@@ -392,6 +398,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Invenia predicts electricity grid activity using machine learning-based predictive models. The company is paid by independent system operators based on the accuracy of its predictions.</p>
+                        <a href="https://invenia.ca/">Jobs at Invenia</a>
                     </div>
                 </div>
             </div>
