--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <dd>Seed</dd>
                         </dl>
                         <p>Appdiff makes testing mobile apps simple, reliable, and comprehensive.</p>
-                        <a href="https://angel.co/appdiff/jobs">Jobs at AppDiff</a>                        
+                        <a href="https://angel.co/appdiff/jobs">Jobs at AppDiff</a>
                     </div>
                 </div>
                 <div class="company-pair">
@@ -318,7 +318,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Focal Systems develops computer vision technology that automatically builds a comprehensive CPG product database, optimizes operations for retailers, and helps customers find what they want.</p>
-                        <a href="https://focal.systems/careers">Jobs at Focal</a> 
+                        <a href="https://focal.systems/careers">Jobs at Focal</a>
                     </div>
                     <div class="company" id="lilt">
                         <h3>
@@ -335,7 +335,7 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Lilt develops world-leading machine translation technology that helps businesses optimize language translation speed, quality and cost to reach new customers.</p>
-                        <a href="https://angel.co/lilt/jobs">Jobs at Lilt</a> 
+                        <a href="https://angel.co/lilt/jobs">Jobs at Lilt</a>
                     </div>
                 </div>
                 <div class="company-pair">
@@ -400,6 +400,23 @@
                         </dl>
                         <p>Invenia predicts electricity grid activity using machine learning-based predictive models. The company is paid by independent system operators based on the accuracy of its predictions.</p>
                         <a href="https://invenia.ca/">Jobs at Invenia</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="constructor">
+                        <h3>
+                            <a href="https://constructor.io/" target="_blank">
+                                <img src="img/company21.png" alt="Marketing Evolution">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Series A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Constructor builds self-learning search technology. Their search engine increases conversions and revenue for some of the largest e-commerce and media websites in the world. </p>
+                        <a href="https://constructor.io/jobs">Jobs at Constructor</a>
                     </div>
                 </div>
             </div>
