added code of conduct

--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
                     San Francisco, CA
                 </p>
                 <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017</p>
+                <p id="copyright"><a href="https://docs.google.com/document/d/17Bl8jOEF2j7iHkyC74WdzBqGlL-yWloUH0ttQxQC-so/edit">Code of Conduct</a></p>
             </div>
         </footer>
 
