--- a/index.html
+++ b/index.html
@@ -497,8 +497,7 @@
                     473 Jackson Street, 2nd Floor <br/>
                     San Francisco, CA
                 </p>
-                <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017</p>
-                <p id="copyright"><a href="https://docs.google.com/document/d/17Bl8jOEF2j7iHkyC74WdzBqGlL-yWloUH0ttQxQC-so/edit">Code of Conduct</a></p>
+                <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017 &ndash; <a href="https://docs.google.com/document/d/17Bl8jOEF2j7iHkyC74WdzBqGlL-yWloUH0ttQxQC-so/edit">Code of Conduct</a></p>
             </div>
         </footer>
 
