--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     473 Jackson Street, 2nd Floor <br/>
                     San Francisco, CA
                 </p>
-                <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017 &ndash; <a href="https://docs.google.com/document/d/17Bl8jOEF2j7iHkyC74WdzBqGlL-yWloUH0ttQxQC-so/edit">Code of Conduct</a></p>
+                <p id="copyright">Zetta Venture Partners &ndash; Copyright 2017 &ndash; <a href="https://docs.google.com/document/d/1ieul0cHN_SFLZHLivNBWVysp_VXDVzNIbG4CaSSzhuo/edit?ts=5a9f61f9">Code of Conduct</a></p>
             </div>
         </footer>
 
