--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                         <p>Domino empowers data scientists with technology that facilitates collaboration and the development of reproducible research systems.</p>
                         <a href="https://www.dominodatalab.com/careers">Jobs at Domino</a>
                     </div>
-                    <div class="company" id="appdiff">
+                    <div class="company" id="test-ai">
                         <h3>
-                            <a href="https://www.appdiff.com/" target="_blank">
-                                <img src="img/company14.png" alt="AppDiff">
+                            <a href="http://test.ai/" target="_blank">
+                                <img src="img/company14.png" alt="Test.ai">
                             </a>
                         </h3>
                         <dl>
@@ -297,8 +297,8 @@
                             <dt>Round:</dt>
                             <dd>Seed</dd>
                         </dl>
-                        <p>Appdiff makes testing mobile apps simple, reliable, and comprehensive.</p>
-                        <a href="https://angel.co/appdiff/jobs">Jobs at AppDiff</a>
+                        <p>Test.ai makes testing mobile apps simple, reliable, and comprehensive.</p>
+                        <a href="https://jobs.lever.co/test.ai/">Jobs at Test.ai</a>
                     </div>
                 </div>
                 <div class="company-pair">
@@ -416,6 +416,40 @@
                         </dl>
                         <p>Constructor builds self-learning search technology. Their search engine increases conversions and revenue for some of the largest e-commerce and media websites in the world. </p>
                         <a href="https://constructor.io/jobs">Jobs at Constructor</a>
+                    </div>
+                    <div class="company" id="finite-state">
+                        <h3>
+                            <a href="https://finitestate.io/" target="_blank">
+                                <img src="img/company22.png" alt="Finite State">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>OH</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Jocelyn Goldfein</dd>
+                        </dl>
+                        <p>Finite State is solving the IoT Security gap for enterprises. Their solution spans prevention, detection, and remediation, grounded on the most advanced threat intelligence dataset. </p>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="rever">
+                        <h3>
+                            <a href="https://reverscore.com/" target="_blank">
+                                <img src="img/company23.png" alt="Rever">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
                     </div>
                 </div>
             </div>
