--- a/index.html
+++ b/index.html
@@ -451,6 +451,22 @@
                         </dl>
                         <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
                     </div>
+ <div class="company" id="promethium">
+                        <h3>
+                            <a href="http://www.pm61data.com/" target="_blank">
+                                <img src="img/company22.png" alt="Promethium">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Jocelyn Goldfein</dd>
+                        </dl>
+                        <p>Promethium’s powerful context automation platform helps enterprises unlock new investments in Big Data and manage compliance and data governance.</p>
+                    </div>
                 </div>
             </div>
         </section>
