--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <div class="company" id="rever">
                         <h3>
                             <a href="https://reverscore.com/" target="_blank">
-                                <img src="img/company23.png" alt="Rever">
+                                <img src="img/REVER-big.png" alt="Rever">
                             </a>
                         </h3>
                         <dl>
