--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
  <div class="company" id="promethium">
                         <h3>
                             <a href="http://www.pm61data.com/" target="_blank">
-                                <img src="img/company22.png" alt="Promethium">
+                                <img src="img/promethium-logo-v5-b-1000.png" alt="Promethium">
                             </a>
                         </h3>
                         <dl>
