--- a/index.html
+++ b/index.html
@@ -451,13 +451,14 @@
                         </dl>
                         <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
                     </div>
+                     </div>
+ <div class="company-pair"
  <div class="company" id="promethium">
                         <h3>
                             <a href="http://www.pm61data.com/" target="_blank">
                                 <img src="img/promethium-logo-v5-b-320.png" alt="Promethium">
                             </a>
                         </h3>
-                        <dl>
                         <dl>
                             <dt>Location:</dt>
                             <dd>CA</dd>
