--- a/index.html
+++ b/index.html
@@ -451,6 +451,20 @@
                         </dl>
                         <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
                 </div>
+                    <div class="company" id="Promethium" class="last">
+                        <h3>
+                            <a href="https://www.pm61data.com" target="_blank">
+                                <img src="img/promethium-logo-v5-b-320.png" alt="Promethium">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Jocelyn Goldfein</dd>
+                        </dl>
+                        <p>Promethium’s powerful context automation platform helps enterprises unlock new investments in Big Data and manage compliance and data governance.</p>
+                        </div>
             </div>
         </section>
         <section id="people">
