--- a/index.html
+++ b/index.html
@@ -433,6 +433,22 @@
                         </dl>
                         <p>Finite State is solving the IoT Security gap for enterprises. Their solution spans prevention, detection, and remediation, grounded on the most advanced threat intelligence dataset. </p>
                     </div>
+<div class="company" id="opsani">
+                        <h3>
+                            <a href="https://www.opsani.com/" target="_blank">
+                                <img src="img/Opsani.png" alt="Opsani">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Jocelyn Goldfein</dd>
+                        </dl>
+                        <p>Opsani empowers developers and operators with tools and services designed from scratch for modern architectures and infrastructure.  </p>
+                    </div>
                 </div>
                 <div class="company-pair">
                     <div class="company" id="rever">
@@ -458,6 +474,8 @@
                             </a>
                         </h3>
                         <dl>
+                            <dt>Location:</dt>
+                            <dd>CA</dd>
                             <dt>Round:</dt>
                             <dd>Seed</dd>
                             <dt>Board seat:</dt>
