--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 <div class="company" id="opsani">
                         <h3>
                             <a href="https://www.opsani.com/" target="_blank">
-                                <img src="img/Opsani.png" alt="Opsani">
+                                <img src="img/Opsani logo.png" alt="Opsani">
                             </a>
                         </h3>
                         <dl>
