--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                         </dl>
                         <p>Finite State is solving the IoT Security gap for enterprises. Their solution spans prevention, detection, and remediation, grounded on the most advanced threat intelligence dataset. </p>
                     </div>
+ </div>
 <div class="company" id="opsani">
                         <h3>
                             <a href="https://www.opsani.com/" target="_blank">
