--- a/index.html
+++ b/index.html
@@ -433,11 +433,12 @@
                         </dl>
                         <p>Finite State is solving the IoT Security gap for enterprises. Their solution spans prevention, detection, and remediation, grounded on the most advanced threat intelligence dataset. </p>
                     </div>
- </div>
-<div class="company" id="opsani">
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="constructor">
                         <h3>
                             <a href="https://www.opsani.com/" target="_blank">
-                                <img src="img/Opsani logo.png" alt="Opsani">
+                                <img src="img/company23.png" alt="Opsani">
                             </a>
                         </h3>
                         <dl>
@@ -448,11 +449,8 @@
                             <dt>Board seat:</dt>
                             <dd>Jocelyn Goldfein</dd>
                         </dl>
- </dl>
                         <p>Opsani empowers developers and operators with tools and services designed from scratch for modern architectures and infrastructure.  </p>
                     </div>
-                </div>
-                <div class="company-pair">
                     <div class="company" id="rever">
                         <h3>
                             <a href="https://reverscore.com/" target="_blank">
@@ -468,8 +466,10 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
+                    </div>
                 </div>
-                    <div class="company" id="Promethium" class="last">
+                <div class="company-pair">
+                    <div class="company" id="promethium" class="last">
                         <h3>
                             <a href="https://www.pm61data.com" target="_blank">
                                 <img src="img/promethium-logo-v5-b-320.png" alt="Promethium">
@@ -484,7 +484,8 @@
                             <dd>Jocelyn Goldfein</dd>
                         </dl>
                         <p>Promethium’s powerful context automation platform helps enterprises unlock new investments in Big Data and manage compliance and data governance.</p>
-                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="people">
