--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="company-pair">
                     <div class="company" id="promethium" class="last">
                         <h3>
-                            <a href="https://www.pm61data.com" target="_blank">
+                            <a href="http://www.pm61data.com" target="_blank">
                                 <img src="img/promethium-logo-v5-b-320.png" alt="Promethium">
                             </a>
                         </h3>
