--- a/index.html
+++ b/index.html
@@ -451,6 +451,22 @@
                         </dl>
                         <p>Opsani empowers developers and operators with tools and services designed from scratch for modern architectures and infrastructure.  </p>
                     </div>
+                    <div class="company" id="crate">
+                        <h3>
+                            <a href="https://crate.io/" target="_blank">
+                                <img src="img/company24.png" alt="Crate">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Round:</dt>
+                            <dd>A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Crate.io builds the open‐sourced CrateDB and the Crate Machine Data Platform, both used to enable real‐time analytics on fire hoses of machine data, improving operational efficiency and profitability. Crate’s distributed SQL technology makes Smart Systems & IoT platforms simpler and less costly to build, scale and operate.</p>
+                    </div>
+                </div>
+                <div class="company-pair">
                     <div class="company" id="rever">
                         <h3>
                             <a href="https://reverscore.com/" target="_blank">
@@ -467,8 +483,6 @@
                         </dl>
                         <p>Rever is a digitized continuous improvement system for global industrial companies.  The Rever platform helps customers to immediately impact productivity, cost-efficiency and employee engagement.</p>
                     </div>
-                </div>
-                <div class="company-pair">
                     <div class="company" id="promethium" class="last">
                         <h3>
                             <a href="http://www.pm61data.com" target="_blank">
