--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div id="hero-content">
                     <span class="logo">Zetta</span>
-                    <h1>Zetta invests in intelligent enterprise software.</h1>
+                    <h1>Zetta invests in AI-First companies.</h1>
                     <p>We partner with companies building software that learns from data to analyze, predict and prescribe outcomes. We lead or co-lead $1-5M funding rounds.</p>
                 </div>
             </div>
