--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                             <dt>Board seat:</dt>
                             <dd>Ash Fontana</dd>
                         </dl>
-                        <p>Lilt develops world-leading machine translation technology that helps businesses optimize language translation speed, quality and cost to reach new customers.</p>
-                        <a href="https://angel.co/lilt/jobs">Jobs at Lilt</a>
+                        <p>Lilt is a complete, high-quality solution for enterprise translation. The first machine translation engine that continuously learns from human feedback, Lilt helps enterprises increase translation speed and quality without spiking costs.</p>
+                        <a href="http://www.lilt.com/careers">Jobs at Lilt</a>
                     </div>
                 </div>
                 <div class="company-pair">
