--- a/index.html
+++ b/index.html
@@ -500,6 +500,37 @@
                         <p>Promethium’s powerful context automation platform helps enterprises unlock new investments in Big Data and manage compliance and data governance.</p>
                     </div>
                 </div>
+                <div class="company-pair">
+                    <div class="company" id="verusen">
+                        <h3>
+                            <a href="https://verusen.com/" target="_blank">
+                                <img src="img/company25.png" alt="Verusen">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>Atlanta</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Jocelyn Goldfein</dd>
+                        </dl>
+                    </div>
+                    <div class="company" id="myia" class="last">
+                        <h3>
+                            <a href="https://www.myiahealth.com/" target="_blank">
+                                <img src="img/company26.png" alt="Myia">
+                            </a>
+                        </h3>
+                        <dl>
+                            <dt>Location:</dt>
+                            <dd>San Francisco</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                        </dl>
+                        <p>Myia is a seamless and invisible intelligent health platform that monitors and engages patients beyond the clinical setting. By providing actionable and immediate insights on patient condition, Myia improves quality of life for patients and predicts and prevents costly medical events for care providers.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="people">
@@ -511,7 +542,7 @@
                             <img src="img/mark.jpg" alt="Mark Gorenberg">
                         </div>
                         <h3><b>Mark Gorenberg</b> – Managing Director</h3>
-                        <p>Mark Gorenberg has 26 years of venture capital experience, funding and serving on the boards of numerous successful start-ups including Omniture (IPO, subsequently acquired by Adobe), AdForce (IPO, subsequently acquired by CMGI), NetDynamics (acquired by Sun Microsystems), Scopus Technologies (IPO, subsequently acquired by Siebel) and Crowdfactory (acquired by Marketo). He is currently a Founder and Managing Director of Zetta Venture Partners, the first early stage fund focused only on the intelligent enterprise. Prior to his career in venture capital Mark served as a software executive, entrepreneur and a member of the first SparcStation team at Sun Microsystems.</p>
+                        <p>Mark Gorenberg has 28 years of venture capital experience, funding and serving on the boards of numerous successful start-ups including Domo (IPO), Teem (acquired by WeWork), Omniture (IPO, subsequently acquired by Adobe), AdForce (IPO, subsequently acquired by CMGI), NetDynamics (acquired by Sun Microsystems), Scopus Technologies (IPO, subsequently acquired by Siebel) and Crowdfactory (acquired by Marketo). He is currently a Founder and Managing Director of Zetta Venture Partners, the first early stage fund focused only on the intelligent enterprise. Prior to his career in venture capital Mark served as a software executive, entrepreneur and a member of the first SparcStation team at Sun Microsystems.</p>
                         <p>Mark is currently a member of the Board of Trustees of the Massachusetts Institute of Technology Corporation, and a board member of the MIT Investment Committee (MITIMCo). In 2011, Mark was appointed by President Barack Obama to the President’s Council of Advisors on Science and Technology, a 21-person advisory group of the nation’s leading scientists and engineers.</p>
                         <p>He graduated from MIT and received Masters Degrees from the University of Minnesota and Stanford University.</p>
                     </li>
@@ -559,13 +590,12 @@
                     </li>
                     <li>
                         <div class="person">
-                            <img src="img/ivy.jpg" alt="Ivy Nguyen">
+                            <img src="img/james.jpg" alt="James Alcorn">
                         </div>
-                        <h3><b>Ivy Nguyen</b> – Associate</h3>
-                        <p>Ivy Nguyen brings over four years of experience as an investor and startup advisor in the technology space.</p>
-                        <p>Prior to joining Zetta Ventures, Ivy was Senior Associate at NewGen Capital, a venture capital firm providing early stage deep tech startups with growth opportunities in China and the greater APAC region. During her tenure at NewGen she sourced and led investments in several companies including Constructor, NuCypher, Assembly, and Agridata.</p>
-                        <p>Before NewGen, Ivy managed the startup accelerator program at Imagine H2O, an organization supporting global water innovation. At IH2O Ivy supported over 40 water tech startups from over 14 countries including Israel, Australia, and Singapore by connecting them to the program's growing network of investors, mentors, and pilot partners at major Fortune 1000 companies.</p>
-                        <p>Ivy earned her B.S. in Chemical Engineering from Stanford University, where she served as News Managing Editor of the Stanford Daily.</p>
+                        <h3><b>James Alcorn</b> – Associate</h3>
+                        <p>James Alcorn is an investment professional with experience in private equity, investment banking, and equity research.</p>
+                        <p>Prior to joining Zetta, James worked as an investor at Spectrum Equity, a global private equity firm supporting software, internet, and information services businesses. Prior to Spectrum, he worked as an investment banking analyst at Avendus Capital in Mumbai, advising India-based consumer internet businesses through their growth stage financings. James’ professional experience began in internet and technology equity research at Mizuho Securities in San Francisco.</p>
+                        <p>James earned a BSc from UC Berkeley where he was a member of the heavyweight rowing team. He is an avid vinyl DJ with a penchant for driving house and techno, and a classically trained pianist and cellist. James grew up in Brisbane, Australia. </p>
                     </li>
                 </ul>
             </div>
