--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
                             <dt>Board seat:</dt>
                             <dd>Jocelyn Goldfein</dd>
                         </dl>
+                        <p>Verusen helps manufacturers optimize their plant operations to minimize downtime and significantly expand available working capital.</p>
                     </div>
                     <div class="company" id="myia" class="last">
                         <h3>
