new test logo and dylan bio

--- a/index.html
+++ b/index.html
@@ -589,6 +589,17 @@
                     </li>
                     <li>
                         <div class="person">
+                            <img src="img/dylan.png" alt="Dylan Reid">
+                        </div>
+                        <h3><b>Dylan Reid</b> – Associate</h3>
+                        <p>Dylan Reid is an investor based in New York, focused on intelligent applications in healthcare and heavy industry.</p>
+                        <p>Prior to joining Zetta he was a principal at KEC Ventures, an early-stage venture firm.  He built their in-house data platform and launched their pre-seed program, leading first check investments in companies across manufacturing, construction and energy.  Prior to being an investor, Dylan was co-founder and CEO of Matter.io, a venture-backed advanced manufacturing startup, for which he was named to the Forbes 30 Under 30 list.</p>
+                        <p>In addition to his work at Zetta, Dylan is involved in the NYC startup ecosystem as mentor to Techstars and CDL. He earned a bachelor’s degree from Cornell University where he studied computational design.</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="person">
                             <img src="img/james.jpg" alt="James Alcorn">
                         </div>
                         <h3><b>James Alcorn</b> – Associate</h3>
